--- a/demo-blog-backend/build.gradle
+++ b/demo-blog-backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'lt.codeacademy'
@@ -24,7 +25,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or 'io.jsonwebtoken:jjwt-gson:0.11.5' for gson
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:5.6.0' // or the version you're using
+    testImplementation 'net.bytebuddy:byte-buddy:1.14.4' // Add this dependency
+    testImplementation 'net.bytebuddy:byte-buddy-agent:1.14.4' // Add this dependency for agent support
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     compileOnly 'org.postgresql:postgresql'
